# StoreHouse

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-bd  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
src/: __init__.py  app.py  worker.py
src/core/: __init__.py  __main__.py  config.py  consumer.py  container.py  db.py  gunicorn.py  logging_config.py  middleware.py  rabbitmq.py
src/migrations/: env.py
src/migrations/versions/: 2f7d9fd9520d_add_blacklist_table.py  65da2de78720_user_table.py  c0f4c18e44b8_add_tables_item_medicine.py
src/rest/: middlewares.py  permissions.py
src/rest/models/: auth.py  images.py  immovable.py  storehouse.py  types.py  user.py  utils.py
src/rest/repository/: auth.py  registration.py
src/rest/service/: base.py  registration.py
src/rest/views/: auth.py  healthcheck.py  immovable.py  registration.py  storehouse.py
src/tables/: __init__.py  immovable.py  item.py  medicine.py  storehouse.py  token.py  user.py
src/tasks/: __init__.py
src/utils/: bootstrap.py  cbv.py  common.py  constants.py  db.py  token.py  types.py
src/utils/exceptions/: http.py  jwt.py  repository.py
tests/: __init__.py  conftest.py  fixture.py  utils.py
tests/rest/: test_healthcheck.py
